add dao README.md 修改pom 修改开发模式

--- a/hotel-web/src/main/resources/application.yml
+++ b/hotel-web/src/main/resources/application.yml
@@ -41,9 +41,9 @@ mybatis:
 
 
  profiles:
-#  active: dev
+  active: dev
 #  active: test
-  active: prod
+#  active: prod
 
 ######################## Logback ########################
 
