--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>hotel-web</module>
+        <module>hotel-dao</module>
     </modules>
     <packaging>pom</packaging>
 
