--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>hotel-web</module>
         <module>hotel-dao</module>
+        <module>hotel-common</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -29,10 +30,24 @@
 
 
     <properties>
+        <start-class>com.gt.hotel.HotelApplication</start-class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.versoin>1.7</java.versoin>
-        <project.jdk>1.7</project.jdk>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.7</java.version>
+        <dev.lib.swagger2>2.6.0</dev.lib.swagger2>
+        <dev.lib.mybatis>1.1.1</dev.lib.mybatis>
+        <dev.lib.druid>1.0.31</dev.lib.druid>
+        <dev.lib.mysql>5.0.5</dev.lib.mysql>
+        <dev.lib.mybatis-plus>2.0.8</dev.lib.mybatis-plus>
+        <dev.lib.velocity>1.7</dev.lib.velocity>
+        <dev.lib.commons-lang3>3.5</dev.lib.commons-lang3>
+        <dev.lib.nekohtml>1.9.22</dev.lib.nekohtml>
+        <dev.lib.vue>2.1.3</dev.lib.vue>
+        <dev.lib.fastjson>1.2.33</dev.lib.fastjson>
+        <dev.lib.jjwt>0.7.0</dev.lib.jjwt>
+        <!-- Mybatis Generator -->
+        <entity.target.dir>src/main/java/</entity.target.dir>
+        <com.gt.hotel.dao.resources.dir>src/main/resources/</com.gt.hotel.dao.resources.dir>
     </properties>
 
     <parent>
@@ -44,24 +59,7 @@
 
     <!--<dependencyManagement>-->
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <!-- 移除内嵌的tomcat运行容器 -->
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-tomcat</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
 
-            <!-- @Configuration注解建议引入 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-configuration-processor</artifactId>
-                <optional>true</optional>
-            </dependency>
 
             <!-- 将内嵌的tomcat容器标记为provided(来自官网) -->
             <dependency>
@@ -81,6 +79,128 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <scope>provided</scope>
+            </dependency>
+
+            <!-- Springboot -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <!-- 移除内嵌的tomcat运行容器 -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+            </dependency>
+
+            <!-- @Configuration注解建议引入 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <optional>true</optional>
+            </dependency>
+
+            <!-- Springboot 热部署 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <optional>true</optional>
+            </dependency>
+
+            <!-- Swagger API文档 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${dev.lib.swagger2}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${dev.lib.swagger2}</version>
+            </dependency>
+            <!-- Mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${dev.lib.mybatis}</version>
+            </dependency>
+
+            <!-- mybatisPlus代码生成模板引擎 -->
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>${dev.lib.velocity}</version>
+            </dependency>
+
+            <!-- MP 核心库 -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${dev.lib.mybatis-plus}</version>
+            </dependency>
+
+            <!-- druid阿里巴巴数据库连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${dev.lib.druid}</version>
+            </dependency>
+            <!-- MySql数据库驱动 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${dev.lib.mysql}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <!-- apache 工具包 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${dev.lib.commons-lang3}</version>
+            </dependency>
+            <!-- thymeleaf&Vue 模板 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.nekohtml</groupId>
+                <artifactId>nekohtml</artifactId>
+                <version>${dev.lib.nekohtml}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>vue</artifactId>
+                <version>${dev.lib.vue}</version>
+            </dependency>
+            <!-- 单元测试 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <!--<scope>test</scope>-->
+            </dependency>
+
+            <!-- Spring Boot Reids 依赖 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+            </dependency>
+            <!-- json 包 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${dev.lib.fastjson}</version>
             </dependency>
 
         </dependencies>
@@ -111,8 +231,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${project.jdk}</source>
-                    <target>${project.jdk}</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -123,6 +243,14 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <!-- 去除单元测试 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
