--- a/hotel-generator/pom.xml
+++ b/hotel-generator/pom.xml
@@ -6,11 +6,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>hotel-dao</artifactId>
+    <artifactId>hotel-generator</artifactId>
     <packaging>jar</packaging>
+    <name>hotel-generator</name>
 
-    <name>hotel-dao</name>
-
+    <description>
+        此项目只是作为生成实体工具类 等
+    </description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,29 +21,9 @@
     <dependencies>
         <dependency>
             <groupId>com.gt.hotel</groupId>
-            <artifactId>hotel-entity</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.gt.hotel</groupId>
             <artifactId>hotel-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <!-- 一定要声明如下配置-->
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-    </build>
 
 </project>
