--- a/hotel-web/pom.xml
+++ b/hotel-web/pom.xml
@@ -14,8 +14,8 @@
     <dependencies>
         <dependency>
             <groupId>com.gt.hotel</groupId>
-            <artifactId>hotel-dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>hotel-service</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
