--- a/hotel-web/src/main/resources/application.yml
+++ b/hotel-web/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
  application:
   name: zhangmz-SpringBoot
  profiles:
-#  active: dev
+  active: dev
 #  active: test
-  active: prod
+#  active: prod
 # security:
 #  jwt:
 #    tokenExpirationTime: 15 # Number of minutes
