--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- Spring Session Redis 方式共享sessoin 依赖包 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+        </dependency>
         <!-- json 包 -->
         <dependency>
             <groupId>com.alibaba</groupId>
