添加两个模块 提供cxf 客户端 与 服务端 单元测试用例的代码在 hotel-web 的 BusUserServiceWsTest

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ tmp/
 /hotel-generator/src/main/java/com/gt/hotel/generator/service/
 /hotel-generator/src/main/java/com/gt/hotel/generator/mapper/
 /hotel-generator/src/main/java/com/gt/hotel/generator/web/
+rebel.xml
+
