--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>hotel-service</module>
         <module>hotel-entity</module>
         <module>hotel-generator</module>
+        <module>hotel-cxf-client</module>
+        <module>hotel-cxf-server</module>
     </modules>
     <packaging>pom</packaging>
     <name>parent</name>
@@ -50,6 +52,7 @@
         <!--<entity.target.dir>src/main/java/</entity.target.dir>-->
         <!--<com.gt.hotel.dao.resources.dir>src/main/resources/</com.gt.hotel.dao.resources.dir>-->
         <dev.lib.lombok>1.16.18</dev.lib.lombok>
+        <dev.lib.cxf>3.1.12</dev.lib.cxf>
     </properties>
 
     <parent>
@@ -230,6 +233,20 @@
             <version>${dev.lib.lombok}</version>
         </dependency>
 
+        <!-- CXF jar包 -->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>${dev.lib.cxf}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web-services</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
@@ -276,6 +293,26 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <!-- jerebel maven 插件，用于生成jrebel.xml -->
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.5</version>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <rebelXmlDirectory>${basedir}/out/production</rebelXmlDirectory>
+                    <!-- 指定生成的jrebel.xml放在哪里， 要求放在web应用的 classpath下 -->
                 </configuration>
             </plugin>
         </plugins>
