去掉cxf 调整接口

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
         <dev.lib.mybatis>1.1.1</dev.lib.mybatis>
         <dev.lib.druid>1.0.31</dev.lib.druid>
         <dev.lib.mysql>5.0.5</dev.lib.mysql>
-        <dev.lib.mybatis-plus>2.1-gamma</dev.lib.mybatis-plus>
+        <dev.lib.mybatis-plus>2.1.0</dev.lib.mybatis-plus>
+        <dev.lib.mybatisplus-spring-boot-starter>1.0.4</dev.lib.mybatisplus-spring-boot-starter>
         <dev.lib.velocity>1.7</dev.lib.velocity>
         <dev.lib.commons-lang3>3.5</dev.lib.commons-lang3>
         <dev.lib.nekohtml>1.9.22</dev.lib.nekohtml>
@@ -133,7 +134,7 @@
             <version>${dev.lib.swagger2}</version>
         </dependency>
         <!-- Mybatis -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${dev.lib.mybatis}</version>
@@ -147,7 +148,7 @@
                     <groupId>org.mybatis</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <!-- mybatisPlus代码生成模板引擎 -->
         <dependency>
@@ -161,6 +162,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
             <version>${dev.lib.mybatis-plus}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatisplus-spring-boot-starter</artifactId>
+            <version>${dev.lib.mybatisplus-spring-boot-starter}</version>
         </dependency>
 
         <!-- druid阿里巴巴数据库连接池 -->
@@ -231,19 +238,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${dev.lib.lombok}</version>
-        </dependency>
-
-        <!-- CXF jar包 -->
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-            <version>${dev.lib.cxf}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web-services</artifactId>
-            <scope>test</scope>
         </dependency>
 
 
