--- a/hotel-common/pom.xml
+++ b/hotel-common/pom.xml
@@ -15,6 +15,10 @@
     </properties>
 
     <dependencies>
-
+		<dependency>
+            <groupId>com.gt.hotel</groupId>
+            <artifactId>hotel-entity</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
