--- a/hotel-web/pom.xml
+++ b/hotel-web/pom.xml
@@ -17,7 +17,7 @@
             <artifactId>hotel-service</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>com.gt.hotel</groupId>
             <artifactId>hotel-cxf-client</artifactId>
             <version>${project.version}</version>
@@ -29,7 +29,7 @@
             <type>jar</type>
             <version>${project.version}</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
