--- a/hotel-web/pom.xml
+++ b/hotel-web/pom.xml
@@ -55,7 +55,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    &lt;!&ndash; 打包时,去除 tk api wechat 的部分文件 &ndash;&gt;
+                    &lt;!&ndash; 打包时,去除 的部分文件 &ndash;&gt;
                     <packagingExcludes>
                         WEB-INF/web.xml,
                         regex[WEB-INF/lib/*.jar]
