--- a/hotel-web/src/main/resources/application-dev.yml
+++ b/hotel-web/src/main/resources/application-dev.yml
@@ -14,17 +14,17 @@ spring:
  thymeleaf:
    cache: false
  redis:
-   host: localhost
+   host: 113.106.202.51
    port: 6379
-#   password: gt@123456
+   password: gt@123456
  session:
    store-type: redis
 
 datasource:
  druid:
-  url: jdbc:mysql://localhost:3306/springbootdemo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
-  username: zhangmz
-  password: zhangmz123
+  url: jdbc:mysql://113.106.202.51:3306/gt_aliyuan?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
+  username: root
+  password: gt123456
   driver-class-name: com.mysql.jdbc.Driver
   platform: mysql
   type: com.alibaba.druid.pool.DruidDataSource
@@ -53,13 +53,20 @@ datasource:
   # 合并多个DruidDataSource的监控数据
   #useGlobalDataSourceStat: true
 
+### 会员CXF项目接口地址
+#project:
+# member:
+#  cxf-url: http://jiaoyu.yifriend.net/memberWS?wsdl
 
 
 ### 设置 Redis session 共享
 redisSession:
-  domainName: null
+  domainName: localhost
   cookiePath: /
   cookieName: JSESSIONID
+### CXF 配置
+#cxf:
+#  path: /webservice
 
 
 
