--- a/hotel-web/src/main/resources/application.yml
+++ b/hotel-web/src/main/resources/application.yml
@@ -24,14 +24,9 @@ spring:
     force: true
     charset: UTF-8
     enabled: true
- thymeleaf:
-  mode: LEGACYHTML5
-  suffix: .html
-
-  #自动重启默认关闭
- devtools:
-  restart:
-   enabled: true
+ jackson:
+ # 定义Json 输出不为null 的字段
+   default-property-inclusion: non_null
 
 ######################## 日志 ########################
 #logging:
@@ -39,10 +34,34 @@ spring:
 # path: logs #日志文件目录
 # 默认情况下，日志文件的大小达到10MB时会切分一次，产生新的日志文件，默认级别为：ERROR、WARN、INFO
 # file: logs/hotel.log #日志文件名
-# mybatis 路径
-mybatis:
- mapperLocations: classpath*:mapper/*.xml
+
+######################## mybatis-plus ########################
+mybatis-plus:
+ mapper-locations: classpath:mapper/*.xml
  type-aliases-package: com.gt.hotel.entity
+ global-config:
+   #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+   id-type: 0
+   #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+   field-strategy: 2
+   #驼峰下划线转换
+   db-column-underline: true
+   #刷新mapper 调试神器
+   refresh-mapper: true
+   #数据库大写下划线转换
+   capital-mode: false
+   #序列接口实现类配置
+   #key-generator: com.baomidou.springboot.xxx
+   #逻辑删除配置
+   #logic-delete-value: 0
+   #logic-not-delete-value: 1
+   #自定义填充策略接口实现
+   #meta-object-handler: com.baomidou.springboot.xxx
+   #自定义SQL注入器
+   #sql-injector: com.baomidou.springboot.xxx
+ configuration:
+   map-underscore-to-camel-case: true
+   cache-enabled: false
 
 
 
