--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Springboot 热部署 -->
+        <!-- SpringBoot 热部署 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
