--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,6 @@
         <module>hotel-service</module>
         <module>hotel-entity</module>
         <module>hotel-generator</module>
-        <module>hotel-cxf-client</module>
-        <module>hotel-cxf-server</module>
     </modules>
     <packaging>pom</packaging>
     <name>parent</name>
@@ -37,20 +35,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.7</java.version>
-        <dev.lib.swagger2>2.6.0</dev.lib.swagger2>
+        <dev.lib.swagger2>2.6.1</dev.lib.swagger2>
         <dev.lib.mybatis>1.1.1</dev.lib.mybatis>
-        <dev.lib.druid>1.0.31</dev.lib.druid>
-        <dev.lib.mysql>5.0.5</dev.lib.mysql>
-        <dev.lib.mybatis-plus>2.1-gamma</dev.lib.mybatis-plus>
+        <dev.lib.druid-spring-boot-starter>1.1.2</dev.lib.druid-spring-boot-starter>
+        <dev.lib.mysql>5.1.39</dev.lib.mysql>
+        <dev.lib.mybatis-plus>2.1.0</dev.lib.mybatis-plus>
+        <dev.lib.mybatisplus-spring-boot-starter>1.0.4</dev.lib.mybatisplus-spring-boot-starter>
         <dev.lib.velocity>1.7</dev.lib.velocity>
         <dev.lib.commons-lang3>3.5</dev.lib.commons-lang3>
         <dev.lib.nekohtml>1.9.22</dev.lib.nekohtml>
         <dev.lib.vue>2.1.3</dev.lib.vue>
         <dev.lib.fastjson>1.2.33</dev.lib.fastjson>
         <dev.lib.jjwt>0.7.0</dev.lib.jjwt>
-        <!-- Mybatis Generator -->
-        <!--<entity.target.dir>src/main/java/</entity.target.dir>-->
-        <!--<com.gt.hotel.dao.resources.dir>src/main/resources/</com.gt.hotel.dao.resources.dir>-->
         <dev.lib.lombok>1.16.18</dev.lib.lombok>
         <dev.lib.cxf>3.1.12</dev.lib.cxf>
     </properties>
@@ -68,7 +64,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
@@ -133,21 +129,6 @@
             <version>${dev.lib.swagger2}</version>
         </dependency>
         <!-- Mybatis -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${dev.lib.mybatis}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>mybatis</artifactId>
-                    <groupId>org.mybatis</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>mybatis-spring</artifactId>
-                    <groupId>org.mybatis</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <!-- mybatisPlus代码生成模板引擎 -->
         <dependency>
@@ -163,12 +144,19 @@
             <version>${dev.lib.mybatis-plus}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatisplus-spring-boot-starter</artifactId>
+            <version>${dev.lib.mybatisplus-spring-boot-starter}</version>
+        </dependency>
+
         <!-- druid阿里巴巴数据库连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>${dev.lib.druid}</version>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${dev.lib.druid-spring-boot-starter}</version>
         </dependency>
+
         <!-- MySql数据库驱动 -->
         <dependency>
             <groupId>mysql</groupId>
@@ -182,26 +170,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>${dev.lib.commons-lang3}</version>
         </dependency>
-        <!-- thymeleaf&Vue 模板 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>net.sourceforge.nekohtml</groupId>
-            <artifactId>nekohtml</artifactId>
-            <version>${dev.lib.nekohtml}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>vue</artifactId>
-            <version>${dev.lib.vue}</version>
-        </dependency>
+
         <!-- 单元测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
 
         <!-- Spring Boot Reids 依赖 -->
@@ -233,19 +207,6 @@
             <version>${dev.lib.lombok}</version>
         </dependency>
 
-        <!-- CXF jar包 -->
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-            <version>${dev.lib.cxf}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web-services</artifactId>
-            <scope>test</scope>
-        </dependency>
-
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
@@ -253,6 +214,12 @@
 		    <version>3.16</version>
 		</dependency>
 
+		<dependency>
+		  <groupId>com.gt.api</groupId>
+		  <artifactId>gt_api</artifactId>
+		  <version>1.3.13-SNAPSHOT</version>
+		</dependency>
+				
     </dependencies>
 
 
