--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <dev.lib.jjwt>0.7.0</dev.lib.jjwt>
         <dev.lib.lombok>1.16.18</dev.lib.lombok>
         <dev.lib.joda-time>2.9.9</dev.lib.joda-time>
+        <dev.lib.gt-api>1.3.12-SNAPSHOT</dev.lib.gt-api>
     </properties>
 
     <parent>
@@ -59,6 +60,22 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.gt.api</groupId>
+            <artifactId>gt_api</artifactId>
+            <version>${dev.lib.gt-api}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-lang</artifactId>
+                    <groupId>commons-lang</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- 将内嵌的tomcat容器标记为provided(来自官网) -->
         <dependency>
