--- a/hotel-web/src/main/resources/application.yml
+++ b/hotel-web/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
  application:
   name: hotel
  profiles:
-  active: @activatedProperties@
+  active: dev
  http:
   encoding:
     force: true
