--- a/hotel-web/src/main/resources/application-dev.yml
+++ b/hotel-web/src/main/resources/application-dev.yml
@@ -12,17 +12,15 @@ spring:
   restart:
    enabled: true
  redis:
-#   host: 113.106.202.51
-   host: localhost
+   host: 127.0.0.1
    port: 6379
-#   password: gt@123456
  session:
    store-type: redis
  datasource:
    druid:
-     url: jdbc:mysql://113.106.202.51:3306/gt_aliyuan?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
+     url: jdbc:mysql://127.0.0.1:3306/gt_hotel?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
      username: root
-     password: gt123456
+     password: 123456
      # 下面为连接池的补充设置，应用到上面所有数据源中
      # 初始化大小，最小，最大
      initial-size: 5
@@ -58,6 +56,7 @@ spring:
       # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
      aop-patterns: com.gt.hotel.*.service.*
 
+
 ############################# 开发环境配置 #############################
 
 
@@ -72,7 +71,6 @@ redisSession:
 swagger:
   show: true
 
-
 ### WXMP 配置属性 ###
 wxmp:
   imageurl:
@@ -81,7 +79,7 @@ wxmp:
     sign: WXMP2017
     membersign: MV8MMFQUMU1HJ6F2GNH40ZFJJ7Q8LNVM
     serverurl: https://deeptel.com.cn
-
+  
 
 
 
