--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
+            <!-- 使用tomcat启动时，需要打开去掉scope注释 -->
             <!--<scope>provided</scope>-->
         </dependency>
 
@@ -205,7 +206,6 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
@@ -221,18 +221,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${dev.lib.lombok}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web-services</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gt.api</groupId>
-            <artifactId>gt_api</artifactId>
-            <version>1.3.12-SNAPSHOT</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
