修改Jrebel配置 测试代码 注释

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ tmp/
 /hotel-generator/src/main/java/com/gt/hotel/generator/mapper/
 /hotel-generator/src/main/java/com/gt/hotel/generator/web/
 rebel.xml
+/out/
