--- a/pom.xml
+++ b/pom.xml
@@ -331,7 +331,7 @@
             </plugin>
 
             <!-- jerebel maven 插件，用于生成jrebel.xml -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.zeroturnaround</groupId>
                 <artifactId>jrebel-maven-plugin</artifactId>
                 <version>1.1.5</version>
@@ -344,6 +344,27 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>-->
+            <!--JRebel的配置-->
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.7</version>
+                <configuration>
+                    <addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+                    <alwaysGenerate>true</alwaysGenerate>
+                    <showGenerated>true</showGenerated>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
             </plugin>
         </plugins>
     </build>
