--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>com.gt.member</groupId>
-            <artifactId>Member_bo</artifactId>
-            <version>1.0.4</version>
+            <artifactId>member_bo</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
         </dependency>
 
         <!-- 将内嵌的tomcat容器标记为provided(来自官网) -->
@@ -328,6 +328,7 @@
                 </configuration>
             </plugin>
             <!-- 去除单元测试 -->
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -336,21 +337,21 @@
                 </configuration>
             </plugin>
 
-            <!-- jerebel maven 插件，用于生成jrebel.xml -->
-            <!--<plugin>
-                <groupId>org.zeroturnaround</groupId>
-                <artifactId>jrebel-maven-plugin</artifactId>
-                <version>1.1.5</version>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>generate-rebel-xml</id>
-                        <phase>process-resources</phase>
+                        <phase>compile</phase>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
             <!--JRebel的配置-->
             <plugin>
                 <groupId>org.zeroturnaround</groupId>
@@ -370,9 +371,9 @@
                         </goals>
                     </execution>
                 </executions>
-
             </plugin>
         </plugins>
     </build>
+
 
 </project>
