--- a/hotel-web/src/main/resources/application.yml
+++ b/hotel-web/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 ####### 例如：port: 8088
 ######################## 容器 ########################
 server:
- port: 80
+ port: 8080
  context-path: /
 ######################## Spring 全局设置 ########################
 spring:
@@ -28,7 +28,7 @@ spring:
 
 ######################## mybatis-plus ########################
 mybatis-plus:
- mapper-locations: classpath:mapper/*.xml
+ mapper-locations: classpath*:mapper/*.xml
  type-aliases-package: com.gt.hotel.entity
  global-config:
    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
