--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,11 @@
             <version>${dev.lib.joda-time}</version>
         </dependency>
 
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>-->
+
     </dependencies>
 
     <!-- 打包环境工具 -->
